--- a/app/src/main/res/layout/extranotes.xml
+++ b/app/src/main/res/layout/extranotes.xml
@@ -4,17 +4,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#005EB8"
+    android:background="@color/colorPrimary"
     tools:context=".ExtraNotes">
 
     <ImageView
-        android:id="@+id/logoView"
+        android:id="@+id/LogoView"
         android:layout_width="85dp"
         android:layout_height="89dp"
         android:layout_marginStart="28dp"
         android:layout_marginEnd="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/typeNotes"
+        app:layout_constraintEnd_toStartOf="@+id/TypeNotes"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -28,23 +28,23 @@
         android:layout_marginEnd="44dp"
         android:text="Extra Notes"
         android:textAlignment="center"
-        android:textColor="#FFFFFF"
+        android:textColor="@color/colorNeutralWhite"
         android:textSize="36sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.478"
-        app:layout_constraintStart_toEndOf="@+id/logoView"
+        app:layout_constraintStart_toEndOf="@+id/LogoView"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.077" />
 
     <EditText
-        android:id="@+id/typeNotes"
+        android:id="@+id/TypeNotes"
         android:layout_width="270dp"
         android:layout_height="150dp"
         android:layout_marginTop="48dp"
         android:background="@drawable/largetextbox"
-        android:backgroundTint="#FFFFFF"
+        android:backgroundTint="@color/colorNeutralWhite"
         android:inputType="text"
         android:padding="15dp"
         android:textColor="#000000"
@@ -64,7 +64,7 @@
         android:layout_height="50dp"
         android:layout_marginTop="48dp"
         android:background="@drawable/roundbutton"
-        android:backgroundTint="#FFFFFF"
+        android:backgroundTint="@color/colorNeutralWhite"
         android:hint="Date and Time"
         android:textAlignment="center"
         android:inputType="datetime"
