--- a/app/src/main/res/layout/questoinnaire.xml
+++ b/app/src/main/res/layout/questoinnaire.xml
@@ -8,7 +8,7 @@
     tools:context=".Questionnaire">
 
     <ImageView
-        android:id="@+id/logoView"
+        android:id="@+id/LogoView"
         android:layout_width="85dp"
         android:layout_height="89dp"
         android:layout_marginStart="28dp"
@@ -32,7 +32,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.478"
-        app:layout_constraintStart_toEndOf="@+id/logoView"
+        app:layout_constraintStart_toEndOf="@+id/LogoView"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.077" />
 
@@ -46,7 +46,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/logoView"
+        app:layout_constraintTop_toBottomOf="@+id/LogoView"
         app:layout_constraintBottom_toBottomOf="parent">
 
         <ScrollView
@@ -184,7 +184,7 @@
                     app:layout_constraintTop_toBottomOf="@+id/seekBar3" />
 
                 <EditText
-                    android:id="@+id/typeSympNotes"
+                    android:id="@+id/TypeSympNotes"
                     android:layout_width="match_parent"
                     android:layout_height="100dp"
                     android:layout_marginTop="4dp"
@@ -213,7 +213,7 @@
                     android:textColor="@color/colorNeutralWhite"
                     android:textSize="26dp"
                     android:textStyle="bold"
-                    app:layout_constraintTop_toBottomOf="@+id/typeSympNotes" />
+                    app:layout_constraintTop_toBottomOf="@+id/TypeSympNotes" />
 
                 <TextView
                     android:id="@+id/datePick"
