--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -37,7 +37,7 @@
         app:layout_constraintVertical_bias="0.077" />
 
     <EditText
-        android:id="@+id/EmailField"
+        android:id="@+id/Email"
         android:layout_width="270dp"
         android:layout_height="50dp"
         android:layout_marginTop="88dp"
@@ -56,7 +56,7 @@
         tools:ignore="MissingConstraints" />
 
     <EditText
-        android:id="@+id/PasswordField"
+        android:id="@+id/password"
         android:layout_width="270dp"
         android:layout_height="50dp"
         android:layout_marginTop="20dp"
@@ -72,7 +72,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/EmailField"
+        app:layout_constraintTop_toBottomOf="@+id/Email"
         app:layout_constraintVertical_bias="0.056"
         tools:ignore="MissingConstraints" />
 
@@ -90,7 +90,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/PasswordField" />
+        app:layout_constraintTop_toBottomOf="@+id/password" />
 
     <TextView
         android:id="@+id/RegisterText"
