--- a/app/src/main/res/layout/foodlog.xml
+++ b/app/src/main/res/layout/foodlog.xml
@@ -7,6 +7,25 @@
     android:background="@color/colorPrimary"
     tools:context=".FoodLog">
 
+    <TextView
+        android:id="@+id/timePick"
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:background="@drawable/roundbutton"
+        android:backgroundTint="@color/colorNeutralWhite"
+        android:hint="Time"
+        android:padding="15dp"
+        android:textAlignment="center"
+        android:textColor="#000000"
+        android:textColorHighlight="#000000"
+        android:textColorHint="#000000"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.755"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/MealField"
+        app:layout_constraintVertical_bias="0.053" />
+
     <ImageView
         android:id="@+id/LogoView"
         android:layout_width="85dp"
@@ -54,7 +73,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.58"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/dateTimeField"
+        app:layout_constraintTop_toBottomOf="@+id/datePick"
         app:layout_constraintVertical_bias="0.066" />
 
     <EditText
@@ -144,14 +163,13 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.239" />
 
-    <EditText
-        android:id="@+id/dateTimeField"
-        android:layout_width="230dp"
+    <TextView
+        android:id="@+id/datePick"
+        android:layout_width="100dp"
         android:layout_height="50dp"
         android:background="@drawable/roundbutton"
         android:backgroundTint="@color/colorNeutralWhite"
-        android:hint="Date and Time"
-        android:inputType="datetime"
+        android:hint="Date"
         android:padding="15dp"
         android:textAlignment="center"
         android:textColor="#000000"
@@ -159,7 +177,7 @@
         android:textColorHint="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.58"
+        app:layout_constraintHorizontal_bias="0.337"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/MealField"
         app:layout_constraintVertical_bias="0.053" />
