--- a/app/src/main/res/layout/extranotes.xml
+++ b/app/src/main/res/layout/extranotes.xml
@@ -14,7 +14,7 @@
         android:layout_marginStart="28dp"
         android:layout_marginEnd="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/TypeNotes"
+        app:layout_constraintEnd_toStartOf="@+id/extraNotes"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -39,7 +39,7 @@
         app:layout_constraintVertical_bias="0.077" />
 
     <EditText
-        android:id="@+id/TypeNotes"
+        android:id="@+id/extraNotes"
         android:layout_width="270dp"
         android:layout_height="150dp"
         android:layout_marginTop="48dp"
@@ -58,17 +58,16 @@
         app:layout_constraintVertical_bias="0.017"
         tools:ignore="MissingConstraints" />
 
-    <EditText
-        android:id="@+id/dateTimeField"
+    <TextView
+        android:id="@+id/datePick"
         android:layout_width="270dp"
         android:layout_height="50dp"
         android:layout_marginTop="48dp"
         android:background="@drawable/roundbutton"
         android:backgroundTint="@color/colorNeutralWhite"
-        android:hint="Date and Time"
-        android:textAlignment="center"
-        android:inputType="datetime"
+        android:hint="Date"
         android:padding="15dp"
+        android:textAlignment="center"
         android:textColor="#000000"
         android:textColorHighlight="#000000"
         android:textColorHint="#000000"
@@ -77,7 +76,28 @@
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Title"
-        app:layout_constraintVertical_bias="0.808"
+        app:layout_constraintVertical_bias="0.573"
+        tools:ignore="MissingConstraints" />
+
+    <TextView
+        android:id="@+id/timePick"
+        android:layout_width="270dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="48dp"
+        android:background="@drawable/roundbutton"
+        android:backgroundTint="@color/colorNeutralWhite"
+        android:hint="time"
+        android:padding="15dp"
+        android:textAlignment="center"
+        android:textColor="#000000"
+        android:textColorHighlight="#000000"
+        android:textColorHint="#000000"
+        app:layout_constraintBottom_toTopOf="@+id/saveBtn"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Title"
+        app:layout_constraintVertical_bias="0.862"
         tools:ignore="MissingConstraints" />
 
     <Button
