--- a/app/src/main/res/layout/medication_log.xml
+++ b/app/src/main/res/layout/medication_log.xml
@@ -70,32 +70,53 @@
         android:textColor="#000000"
         android:textColorHighlight="#000000"
         android:textColorHint="#000000"
-        app:layout_constraintBottom_toTopOf="@+id/dateTimeField"
+        app:layout_constraintBottom_toTopOf="@+id/datePick"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/TypeField"
         tools:ignore="MissingConstraints" />
 
-    <EditText
-        android:id="@+id/dateTimeField"
-        android:layout_width="270dp"
+    <TextView
+        android:id="@+id/datePick"
+        android:layout_width="120dp"
         android:layout_height="50dp"
         android:layout_marginTop="48dp"
         android:background="@drawable/roundbutton"
         android:backgroundTint="@color/colorNeutralWhite"
-        android:hint="Date and Time"
-        android:inputType="datetime"
+        android:hint="Date"
         android:padding="15dp"
+        android:textAlignment="center"
         android:textColor="#000000"
         android:textColorHighlight="#000000"
         android:textColorHint="#000000"
         app:layout_constraintBottom_toTopOf="@+id/saveBtn"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintHorizontal_bias="0.24"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Title"
-        app:layout_constraintVertical_bias="0.808"
+        app:layout_constraintVertical_bias="0.806"
+        tools:ignore="MissingConstraints" />
+
+    <TextView
+        android:id="@+id/timePick"
+        android:layout_width="120dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="48dp"
+        android:background="@drawable/roundbutton"
+        android:backgroundTint="@color/colorNeutralWhite"
+        android:hint="Time"
+        android:padding="15dp"
+        android:textAlignment="center"
+        android:textColor="#000000"
+        android:textColorHighlight="#000000"
+        android:textColorHint="#000000"
+        app:layout_constraintBottom_toTopOf="@+id/saveBtn"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.756"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Title"
+        app:layout_constraintVertical_bias="0.806"
         tools:ignore="MissingConstraints" />
 
     <Button
