--- a/app/src/main/res/layout/questoinnaire.xml
+++ b/app/src/main/res/layout/questoinnaire.xml
@@ -72,11 +72,13 @@
                 <TextView
                     android:id="@+id/Symp1ValuesView"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="30dp"
                     android:layout_centerHorizontal="true"
+                    android:textAlignment="center"
                     android:text="1          2          3          4          5"
+                    android:autoSizeTextType="uniform"
+                    android:autoSizeMinTextSize="26dp"
                     android:textColor="@color/colorNeutralPaleGray"
-                    android:textSize="26dp"
                     app:layout_constraintTop_toBottomOf="@+id/Symp1View" />
 
                 <SeekBar
@@ -110,11 +112,13 @@
                 <TextView
                     android:id="@+id/Symp2ValuesView"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="30dp"
                     android:layout_centerHorizontal="true"
+                    android:textAlignment="center"
                     android:text="1          2          3          4          5"
+                    android:autoSizeTextType="uniform"
+                    android:autoSizeMinTextSize="26dp"
                     android:textColor="@color/colorNeutralPaleGray"
-                    android:textSize="26dp"
                     app:layout_constraintTop_toBottomOf="@+id/Symp2View" />
 
                 <SeekBar
@@ -148,11 +152,13 @@
                 <TextView
                     android:id="@+id/Symp3ValuesView"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="30dp"
                     android:layout_centerHorizontal="true"
+                    android:textAlignment="center"
                     android:text="1          2          3          4          5"
+                    android:autoSizeTextType="uniform"
+                    android:autoSizeMinTextSize="26dp"
                     android:textColor="@color/colorNeutralPaleGray"
-                    android:textSize="26dp"
                     app:layout_constraintTop_toBottomOf="@+id/Symp3View" />
 
                 <SeekBar
