--- a/app/src/main/res/layout/bloodsugar.xml
+++ b/app/src/main/res/layout/bloodsugar.xml
@@ -36,31 +36,56 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.077" />
 
+    <TextView
+        android:id="@+id/SugarView"
+        android:layout_width="270dp"
+        android:layout_height="30dp"
+        android:text="Blood Sugar (mmol/L)"
+        android:textColor="@color/colorNeutralWhite"
+        android:textSize="22dp"
+        android:layout_marginTop="44dp"
+        app:layout_constraintTop_toBottomOf="@id/LogoView"
+        app:layout_constraintBottom_toTopOf="@+id/SugarField"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent" />
+
     <EditText
         android:id="@+id/SugarField"
         android:layout_width="270dp"
         android:layout_height="50dp"
-        android:layout_marginTop="88dp"
         android:background="@drawable/roundbutton"
         android:backgroundTint="@color/colorNeutralWhite"
         android:hint="Blood Sugar (mmol/L)"
         android:inputType="textPersonName"
         android:padding="15dp"
-        android:textColor="#000000"
-        android:textColorHighlight="#000000"
-        android:textColorHint="#000000"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textColor="@color/colorTextBlack"
+        android:textColorHighlight="@color/colorTextBlack"
+        android:textColorHint="@color/colorTextBlack"
+        android:layout_marginTop="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Title"
-        app:layout_constraintVertical_bias="0.008" />
+        app:layout_constraintTop_toBottomOf="@+id/SugarView"
+         />
+
+    <TextView
+        android:id="@+id/DateTimeView"
+        android:layout_width="270dp"
+        android:layout_height="30dp"
+        android:text="Date and Time"
+        android:textColor="@color/colorNeutralWhite"
+        android:textSize="22dp"
+        android:layout_marginTop="40dp"
+        app:layout_constraintTop_toBottomOf="@id/SugarField"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/datePick"
         android:layout_width="270dp"
         android:layout_height="50dp"
-        android:layout_marginTop="44dp"
         android:background="@drawable/roundbutton"
         android:backgroundTint="@color/colorNeutralWhite"
         android:hint="Date"
@@ -72,7 +97,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/SugarField"
+        app:layout_constraintTop_toBottomOf="@+id/DateTimeView"
         app:layout_constraintVertical_bias="0.0" />
 
     <TextView
